<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weight Loss Challenge</string>
    <string name="menu_new">New</string>
    <string name="menu_back">Back</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="pickdate">Select Date</string>
    <string name="enter">Enter</string>
    <string name="weight">Weight</string>
    <string name="date">Date</string>
    <string name="percent">%</string>
    <string name="DateHint">mm/dd/yyyy</string>
    <string name="loss">Loss</string>
    <string name="remove_row">Remove row</string>
    <string name="remove_all_data">Remove all data</string>
    <string name="menu_header_title">Table Actions</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="file_deleted">Deleted</string>
    <string name="file_saved">Saved</string>
    <string name="NameHint">Name</string>
    <string name="name_required">Name required!</string>
    <string name="title_invalid">Invalid Entry</string>
    <string name="invalid_message">Entry not added to table.</string>
    <string name="error_text">Error</string>
    <string name="ok_text">Ok</string>
</resources>