<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:focusable="true"
	android:focusableInTouchMode="true"
	android:background="@drawable/main_border" >

    <TextView
        android:paddingTop="5dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:ems="10"
        android:hint="@string/DateHint"
        android:inputType="date"
        android:focusable="true"
		android:focusableInTouchMode="false" />
    
    <TextView
        android:paddingTop="5dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:text="@string/weight"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:text="@string/enter"
        android:textStyle="bold"
  		android:padding="0dp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonEnter"
		android:background="@drawable/table_border" >

        <TableLayout
            android:paddingTop="5dp"
        	android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRowHeader" >

                <TextView
                    android:id="@+id/textViewDateHeader"
                    android:gravity="center_horizontal"
    				android:layout_weight="1"
    				android:text="@string/date"
    				android:background="@android:color/background_dark"
    				android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                
                <TextView
                    android:id="@+id/textViewWeightHeader"
                    android:gravity="center_horizontal"
    				android:layout_weight="1"
    				android:text="@string/weight"
                    android:background="@android:color/background_dark"
    				android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                
                <TextView
                    android:id="@+id/textViewLossHeader"
                    android:gravity="center_horizontal"
    				android:layout_weight="1"
    				android:text="@string/loss"
                    android:background="@android:color/background_dark"
    				android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                
                <TextView
                    android:id="@+id/textViewPercentHeader"
                    android:gravity="center_horizontal"
    				android:layout_weight="1"
    				android:text="@string/percent"
                    android:background="@android:color/background_dark"
    				android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

        </TableLayout>

    </ScrollView>

</RelativeLayout>